Change css in shuffle alignment and fix the generator number

--- a/assets/styles/shuffle.css
+++ b/assets/styles/shuffle.css
@@ -29,6 +29,7 @@
     font-family: Arial Black, san-serif;
     font-weight: 900;
     font-size: 30px !important;
+    text-align: center;
     color: #FF2F71 !important;
     padding-top: 230px !important;
     padding-left: 50px !important;
@@ -154,6 +155,7 @@
 }
 
 .shuffle_div{
+    position: absolute;
     width: 1300px;
     height: 300px;
     border: 3px solid transparent;
